--- a/assets/sass/components/_modal.scss
+++ b/assets/sass/components/_modal.scss
@@ -6,7 +6,8 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: rgba(0, 0, 0, 0.5);
+	overflow-wrap: break-word;
+	// background-color: rgba(0, 0, 0, 0.5);
 }
 
 .modal-content {
@@ -16,7 +17,6 @@
 	border-radius: 5px;
 	position: relative;
 	width: 80%;
-
 }
 
 .close {
