--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -38,6 +38,7 @@ $font: (
 $palette: (
 	bg: #ffffff,
 	fg: rgba(44, 49, 56, 0.75),
+	// fg: #fff,
 	fg-bold: #656dba,
 	//main blue
 	fg-light: rgba(67, 75, 86, 0.55),
