--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -77,6 +77,7 @@
 @import 'components/carousel';
 @import 'components/banks';
 @import 'components/modal';
+@import 'components/security';
 @import 'components/howitworks';
 @import 'components/gettingstarted';
 @import 'components/testimonials';
