added FDIC rule

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3445,7 +3445,7 @@ article {
 .wrapper {
   width: 100%;
   padding-bottom: 0;
-  background-color: #000;
+  background-color: #0b1f26;
 }
 .wrapper > .inner {
   width: 80em;
