button linear gradient

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -105,11 +105,11 @@ button,
 	.button {
 		background-image: linear-gradient(
 			to right,
-			#eb8585,
+			#935123,
 			#656dba,
 			#4d5a90,
 			#7183cd,
-			#eb8585
+			#935123
 		);
 		background-size: 500%;
 		animation: background-animation 5s linear infinite alternate;
