--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1761,7 +1761,7 @@ input[type=reset],
 input[type=button],
 button,
 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px #577b9e;
@@ -3527,7 +3527,7 @@ article {
 .wrapper > .inner > .main.accent1 input[type=button],
 .wrapper > .inner > .main.accent1 button,
 .wrapper > .inner > .main.accent1 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -3812,7 +3812,7 @@ article {
 .wrapper > .inner > .main.accent2 input[type=button],
 .wrapper > .inner > .main.accent2 button,
 .wrapper > .inner > .main.accent2 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -4097,7 +4097,7 @@ article {
 .wrapper > .inner > .main.accent3 input[type=button],
 .wrapper > .inner > .main.accent3 button,
 .wrapper > .inner > .main.accent3 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -4382,7 +4382,7 @@ article {
 .wrapper > .inner > .main.accent4 input[type=button],
 .wrapper > .inner > .main.accent4 button,
 .wrapper > .inner > .main.accent4 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -4890,7 +4890,7 @@ article {
 #menu input[type=button],
 #menu button,
 #menu .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -5131,7 +5131,7 @@ body.is-menu-visible #menu {
 #banner > .items section.accent1 input[type=button],
 #banner > .items section.accent1 button,
 #banner > .items section.accent1 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -5206,7 +5206,7 @@ body.is-menu-visible #menu {
 #banner > .items section.accent2 input[type=button],
 #banner > .items section.accent2 button,
 #banner > .items section.accent2 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -5281,7 +5281,7 @@ body.is-menu-visible #menu {
 #banner > .items section.accent3 input[type=button],
 #banner > .items section.accent3 button,
 #banner > .items section.accent3 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -5389,7 +5389,7 @@ body.is-menu-visible #menu {
 #banner > .items section.accent4 input[type=button],
 #banner > .items section.accent4 button,
 #banner > .items section.accent4 .button {
-  background-image: linear-gradient(to right, #eb8585, #656dba, #4d5a90, #7183cd, #eb8585);
+  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
