--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4853,7 +4853,9 @@ article {
   visibility: hidden;
   width: 22em;
   z-index: 10002;
-  background-image: linear-gradient(45deg, #403f87, #656dba, #e08585, #7f85b8, #adafbe);
+  background: rgb(150,21,5);
+background: linear-gradient(45deg, rgba(150,21,5,1) 15%, rgba(79,144,77,1) 55%, rgba(0,149,255,1) 100%);
+  /* background-image: linear-gradient(45deg, #403f87, #656dba, #e08585, #7f85b8, #adafbe); */
 }
 #menu input,
 #menu select,
@@ -4892,7 +4894,9 @@ article {
 #menu input[type=button],
 #menu button,
 #menu .button {
-  background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123);
+  background: rgb(150,21,5);
+background: linear-gradient(90deg, rgba(150,21,5,1) 15%, rgba(79,144,77,1) 55%, rgba(0,149,255,1) 100%);
+  /* background-image: linear-gradient(to right, #935123, #656dba, #4d5a90, #7183cd, #935123); */
   background-size: 500%;
   animation: background-animation 5s linear infinite alternate;
   box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.25);
@@ -5201,7 +5205,10 @@ body.is-menu-visible #menu {
   background-color: black;
 }
 #banner > .items section.accent2 {
-  background-image: linear-gradient(to right, #6e0404, #db0b0b, #177656, #68ba65, #7877d0);
+  /* background: rgb(222,33,11); */
+  background: rgb(150,21,5);
+  background: linear-gradient(90deg, rgba(150,21,5,1) 20%, rgba(79,144,77,1) 75%, rgba(0,149,255,1) 100%);
+  /* background-image: linear-gradient(to right, #6e0404, #db0b0b, #177656, #68ba65, #7877d0); */
 }
 #banner > .items section.accent2 input[type=submit],
 #banner > .items section.accent2 input[type=reset],
