--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -17,7 +17,7 @@ button,
 	font-weight: _font(weight-extrabold);
 	height: auto;
 	line-height: 1.2;
-	padding: 0.5em 1.5em;
+	padding: 0.8em 1.5em;
 	text-align: center;
 	text-decoration: none;
 	white-space: nowrap;
@@ -84,8 +84,8 @@ button,
 		input[type='button'],
 		button,
 		.button {
-			font-size: 0.75em;
-			padding: 0.45em 1.2em;
+			font-size: 0.95em;
+			padding: 0.90em 1.2em;
 
 			&#contest-btn.small {
 				font-size: 0.85em;
@@ -103,21 +103,8 @@ button,
 	input[type='button'],
 	button,
 	.button {
-		background-image: linear-gradient(
-			to right,
-<<<<<<< HEAD
-			#935123,
-			#656dba,
-			#4d5a90,
-			#7183cd,
-			#935123
-=======
-			#d00909,
-			#139a23,
-			#65ba88,
-			#6664c8
->>>>>>> ef72231 (christmas site)
-		);
+		background: rgb(222,33,11);
+		background: linear-gradient(to right, rgba(222,33,11,1) 15%, rgba(79,144,77,1) 55%, rgba(0,149,255,1) 100%);
 		background-size: 500%;
 		animation: background-animation 5s linear infinite alternate;
 		box-shadow: inset 0 0 0 1px _palette($p, border);
