--- a/assets/sass/layout/_banner.scss
+++ b/assets/sass/layout/_banner.scss
@@ -3,25 +3,15 @@
 #banner {
 	@include vendor('display', 'flex');
 	@include vendor('flex-direction', 'row');
-	// background-color: darken(_palette(accent1, bg), 15);
+	background-color: darken(_palette(accent1, bg), 15);
 
 	> .items {
-		// @include vendor('display', 'flex');
-		// @include vendor('flex-direction', 'column');
-		// @include vendor('flex-grow', '0');
-		// @include vendor('flex-shrink', '0');
+		@include vendor('display', 'flex');
+		@include vendor('flex-direction', 'column');
+		@include vendor('flex-grow', '0');
+		@include vendor('flex-shrink', '0');
 		width: 40%;
 
-
-		.sherry {
-			@include padding(5em, 6em);
-			background-color: red;;
-			// @include vendor(
-			// 	'transition',
-			// 	('opacity 0.5s ease-in-out', 'transform 0.5s ease-in-out')
-			// );
-
-		
 			h1 {
 				font-size: 1.75em;
 				color: white;
@@ -31,54 +21,34 @@
 			}
 	
 
-			// &.accent1 {
-			// 	@include color-typography(accent1);
-			// 	@include color-button(accent1);
-			// }
-		
+			&.accent1 {
+				@include color-typography(accent1);
+				@include color-button(accent1);
+			}
+		//color changes must be made in main.css!!!
+			&.accent2 {
+				@include color-typography(accent1);
+				@include color-button(accent1);
+				 background-image: linear-gradient(
+				 	 to right,
 
-<<<<<<< HEAD
-					#935123,
-					#7183cd,
-					#656dba,
-					#403f87
-				);
+				 	#d00909,
+				 	#139a23,
+				 	#65ba88,
+				 	#6664c8
+				 );
 				@include color-button(accent2);
 			}
 
 			&.accent3 {
-				background-image: linear-gradient(
-					to right,
-
-					#935123,
-					#7183cd,
-					#656dba,
-					#403f87
-				);
-				@include color-button(accent2);
-			}
-=======
-				// background-image: linear-gradient(
-				// 	 to right,
-
-				// 	#d00909,
-				// 	#139a23,
-				// 	#65ba88,
-				// 	#6664c8
-				// );
-				// @include color-button(accent2);
+				@include color-typography(accent3);
+				@include color-button(accent3);
 			}
 
-			// &.accent3 {
-			// 	@include color-typography(accent3);
-			// 	@include color-button(accent3);
-			// }
->>>>>>> ef72231 (christmas site)
-
-			// &.accent4 {
-			// 	@include color-typography(accent4);
-			// 	@include color-button(accent4);
-			// }
+			&.accent4 {
+				@include color-typography(accent4);
+				@include color-button(accent4);
+			}
 		}
 	}
 
